build/k8s/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          imagePullPolicy: Always
          image: soundsofanarchy/otus-microservices-architect:v2.1.0-auth-service-arm
          ports:
            - containerPort: 9000
