build/k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  type: LoadBalancer
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      name: http
      port: 9090
      targetPort: 9000
