build/k8s/auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
  namespace: auth-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /sign-up
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /auth/(.*)/sign-up
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 9090
